# extensionvscode

./: .gitignore  PLAN.md  SETUP_COMPLETE.sh
.claude/: claude.md
game/: NPC_INTEGRATION_SUMMARY.md  NPC_SETUP_GUIDE.md  README.md  config.example.json  cutscene.js  game.js  house-interior.html  index.html  npc-demo.html  npc-demo2.html  roadmap.json  story.json  test-npcs.html
n8n/: README.txt  docker-compose.yml
v1exbackend/: .env.example  Dockerfile  check_token.py  create_db.py  migrate.sh  pyproject.toml  seeders.py  verify_db.py
v1exbackend/alembic/: README  env.py
v1exbackend/alembic/versions/: 001_create_users_table.py  004_create_tasks_table.py  005_create_code_snapshots_table.py  006_create_events_table.py  007_create_embeddings_table.py  008_create_rate_limit_audits_table.py
v1exbackend/app/agents/: checkpointer.py  nodes.py
v1exbackend/app/agents/tools/: rag_tools.py  task_tools.py
v1exbackend/app/api/routes/: __init__.py  code_snapshots.py  events.py  tasks.py
v1exbackend/app/api/routes/admin/: __init__.py
v1exbackend/app/core/: database.py  rabbitmq.py  rate_limiter.py  redis_client.py  websocket.py
v1exbackend/app/models/: __init__.py  embedding.py  goal.py  task.py
v1exbackend/app/schemas/: __init__.py  code_snapshot_schemas.py  course_schemas.py  event_schemas.py  goal_schemas.py  parquet_schemas.py
v1exbackend/app/services/: __init__.py  event_service.py  goal_service.py  rate_limit_audit_service.py  user_service.py
v1exbackend/scripts/: quick_start.sh  test_rabbitmq.py  test_redis.py  validate_imports.py
v1exbackend/tests/: conftest.py  test_openai_tracker.py
v1extension/: CHANGELOG.md  COMO_PROBAR.md  INTEGRATION_GUIDE.md  README.md  README_INTEGRACION.md  package-lock.json  package.json  settings.example.json
v2extension/: .env.example  .gitignore  ESTADO_ACTUAL.md  PGVECTOR_INSTALL.md  (+5 more)
(+356 files in other folders)
